--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/WildCodeSchool/Express-Quests#readme",
   "dependencies": {
+    "argon2": "^0.30.3",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "joi": "^17.9.2",
