--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,8 @@
 APP_PORT=5000
+
+DB_HOST=localhost
+DB_PORT=3306
+DB_USER=YOU_USER
+DB_PASSWORD=YOU_PASSWORD
+DB_NAME=YOU_DB_NAME
+JWT_SECRET=YOU_JWT_SECRET
